# med-imagetools

./: .coderabbit.yaml  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  data  database_report.md  demo.py  imagemask_tutorial.ipynb  images.csv  imgtools.yaml  imgtools_settings.yaml  imgtools_settings3.yaml  med-imgtools_jsonschema.json  mkdocs.yml  mypy.ini  outputs.txt  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py  test_itk.py
.github/actions/: unit_tests_action.yml
.github/actions/pytest/: action.yml
.github/workflows/: build-ci.yml  build-pkg-manual.yml  build-pkg.yml  deprecated_ci.yml  docker-publish.yml  main-ci.yml  main.yml  manual-test.yml  termshot.yml
config/: coverage.toml  mypy.ini  pytest.ini  ruff.toml
csvs/: imgtools_Pancreatic-CT-CBCT-SEG.csv
dev/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
dev/AutoPipeline/: index.html
dev/cli/AutoPipeline/: index.html
dev/cli/imgtools/: index.html
dev/cli/nnUNet/: index.html
dev/cli/shell-completion/: index.html
dev/database_report/: index.html
dev/nnUNet/: index.html
dev/reference/autopipeline/: index.html
dev/reference/autopipeline_utils/: index.html
dev/reference/crawler/: index.html
dev/reference/dicom_metadata/: index.html
dev/reference/exceptions/: index.html
dev/reference/interlacer/: index.html
dev/reference/nnunet_pipeline/: index.html
dev/search/: search_index.json
dev/usage/: index.html
dev/usage/CoreTypes/: index.html
dev/usage/autopipeline/: index.html
dev/usage/nnunet_pipeline/: index.html
devnotes/: input_classes.ipynb  testing.md
devnotes/transform_notebooks/: transforms.ipynb
docs/: .pages  AutoPipeline.md  dicomsort.md  duck.ipynb  imageutils_notebook.ipynb  imgtools_ops.ipynb  index.md  interlacer.html  new_stl_file.stl  nnUNet.md  requirements.txt  star.glb
docs/cli/: .pages  imgtools.md  index.md  shell-completion.md
docs/images/: Declan_UML.drawio
docs/reference/: .pages  autopipeline.md  autopipeline_utils.md  dicomsort.md  exceptions.md  nnunet_pipeline.md  update_api_reference.py
docs/reference/DICOM/: DICOM.md  interlacer.md  sort.md
docs/reference/coretypes/: .pages  base_masks.md  base_medimage.md  box.md
docs/reference/dicom/: .pages  dicom_find.md  dicom_reader.md  interlacer.md  read_tags.md  utils.md
docs/reference/dicom-utils/: .pages  find-dicoms.md  load-dicom.md  lookup_tag.md  similar_tags.md  tag-helpers.md  tag_exists.md
docs/reference/dicomsort/: dicomsorter.md  patternparser.md
docs/reference/io/: .pages  nnunet_output.md  readers.md  sample_input.md  sample_output.md  validators.md
docs/reference/loggers/: json_logging.md  logging_config.md  processors.md
docs/reference/pattern_parser/: parser.md  pattern_resolver.md
docs/reference/transforms/: base_transform.md  functional.md  intensity_transforms.md  lambda_transforms.md  spatial_transforms.md  transformer.md
docs/usage/: .pages  autopipeline.md  index.md  nnunet_pipeline.md
examples/: README.md  adsf.py  autorun.py  autotest.py  ct_rtstruct_quickstart.py  final_pipeline.py  process_ct_pt.py  process_general.py  process_quebec.py  process_quebec.sh  radcure_simple.py
images/: methodology.png.REMOVED.git-id  obj_1_Tiny Duck.stl  obj_2_Bow.stl
imgtools/: README.md  __init__.py  autonew.py  autopipeline.py  image.py  io.py  pipeline.py  structureset.py  util.py
imgtools/datagraph/: __init__.py  data_graph.py
imgtools/dose/: __init__.py  dose.py
imgtools/examples/: radcure_simple.py
imgtools/io/: __init__.py  common.py  dataset.py  loaders.py  writers.py
imgtools/modules/: __init__.py  ctmrscan.py  datagraph.py  dose.py  pet.py  scan.py  segmentation.py  sparsemask.py  structureset.py
imgtools/ops/: README.md  functional.py  ops.py
imgtools/petscan/: __init__.py  petscan.py
imgtools/segmentation/: __init__.py  segmentation.py  structureset.py
imgtools/transforms/: intensity.py  spatial.py
imgtools/utils/: __init__.py  args.py  autopipeutils.py  crawl.py  dicomutils.py  imageutils.py  nifti_to_dicom.py  nnunet.py
sandbox/: vector_shift.py
scripts/: analyze_benchmarks.ipynb  benchmark.sh  compare_crawl.ipynb  extractSR.py  octane_sr.txt  test_crawl2.ipynb  test_dpath.ipynb
snapshots/CPTAC-UCEC_snapshots/: CPTAC-UCEC_CT_pydicom  CPTAC-UCEC_MR_default  CPTAC-UCEC_RTSTRUCT_default
snapshots/LIDC-IDRI_snapshots/: LIDC-IDRI_SEG_default
snapshots/Pancreatic-CT-CBCT-SEG_snapshots/: Pancreatic-CT-CBCT-SEG_CT_pydicom
src/imgtools/: __init__.py  autopipeline.py  autopipeline_utils.py  betapipeline.py  exceptions.py  image.py  nnunet_pipeline.py  pipeline.py  types.py
tests/: conf_helpers.py  conftest.py  conftest_utils.py  dataset_check.py  test_autopipe.py  test_autopipe_dev.py  test_components.py  test_conftest.py  test_dataset.py  test_imageutils.py  test_modalities.py  test_ops.py  test_pipeline.py
tests/_deprecated/: dataset_check.py.deprecated  test_components.py  test_ops.py  test_pipeline.py
tests/coretypes/: test_box.py  test_direction.py  test_handling_labels.py  test_helpers.py
tests/crawl/: conftest.py  test_crawl.py  test_crawl.py.deprecated
tests/datasets/: test_example_data.py  test_github_helper.py  test_sample_images.py
tests/dicom/: test_dicom_utils.py  test_interlacer.py  test_metadata.py  test_metadata_extractors.py
tests/e2e/: conftest.py
tests/integration/: conftest.py
tests/legacy_tests/: conftest.py  test_components.py  test_components.py.deprecated  test_modalities.py  test_ops.py  test_pipeline.py  test_pipeline.py.deprecated
tests/modules/: conftest.py  datagraph.py  test_new_structureset.py  test_segmentation.py  test_structureset.py
tests/pattern_resolver/: test_pattern_resolver.py
tests/unittests/: conftest.py
tests/utilities/: test_datetime.py  test_dictionaries.py  test_imageutils.py  test_timer.py
use-cases/: use_case_1_from_scratch.sh  use_case_1_pre_crawled.sh  use_case_2_manual.py  use_case_3_auto.sh  use_case_3_manual.py  use_case_3_regex.yaml  use_case_3_utils.py
(+902 files in other folders)
